fix(qa): SSE streaming not working - root cause and full fix
Root causes:
1. WebClient (Reactor Netty) incompatible with Tomcat in Spring MVC
   → Replaced with JDK HttpClient for reliable SSE streaming
2. DeepSeek reasoning model produces reasoning_content with null content
   → Send '🤔 ' thinking hint during reasoning phase
3. break only breaks inner loop, outer toIterable() blocks forever
   → Changed to break outerLoop
4. DeepSeekProviderConfig.getModel() hardcoded deepseek-v4-pro
   → Read model from config (deepseek-v4-flash)
5. SSE_TIMEOUT too short (5 min) for reasoning models
   → Increased to 10 min
6. Frontend SSE parser checked 'data: ' (with space) but SSE
   uses 'data:' (no space) in some environments
   → Changed to check 'data:' (without space requirement)
7. Spring Security exception after SSE stream completion
   → Made SSE endpoint bypass Spring Security exception handling
8. Vite proxy buffered SSE responses
   → askStream connects directly to backend in dev mode